# roctris2

./: .gitignore  Cargo.toml  app-build-launch.sh  build-app.sh  game-build-launch.sh  glue-gen.sh  host-build.sh  platform-build.sh  random-platform-for-glue.roc
app/: linux-x64.rh  metadata_linux-x64.rm  test.ll  test.roc
game/: Block.roc  Color.roc  GameLoop.roc  Keys.roc  TerminalRender.roc  Timer.roc  Util.roc  Vec2.roc  View.roc  launch.roc  roctris.roc
platform/: PlatformTasks.roc  Random.roc  SomeEffect.roc  Stdout.roc  Terminal.roc  Thread.roc  main-build.roc  main-glue.roc  main.roc
platform/crates/host/: Cargo.toml  build.rs
platform/crates/host/src/: lib.rs  main.rs
platform/crates/roc_app/src/: wasm32.rs
platform/crates/roc_host/: Cargo.toml
platform/crates/roc_host/src/: lib.rs  some_type_glue.rs
platform/crates/roc_std/: Cargo.toml
