[package]
name = "host"
authors = ["Jared Cone"]
edition = "2021"
license = "UPL-1.0"
version = "0.0.1"

[lib]
name = "host"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
roc_std = { git = "https://github.com/roc-lang/roc.git" }
backtrace = "=0.3.69"
libc = "=0.2.155"
